ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier__c/Tier__c.object-meta.xml
<CustomObject>
    <description>Object to manage Tier information (e.g. maximum &amp; minimum amount of squares before Tier change).</description>
    <label>Tier</label>
    <nameField>
        <displayFormat>Tier {0}</displayFormat>
        <label>Tier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tiers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>