ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier__c/fields/Minimum_Squares__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Squares__c</fullName>
    <label>Minimum Squares</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>