ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier__c/fields/Percentage_Tier_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Tier_Invoices__c</fullName>
    <description>(temp) field to calculate rebate invoice amounts....</description>
    <label>Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>