ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier__c/fields/Tier_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Tier_Evaluation_Date__c</fullName>
    <defaultValue>TODAY() + 365</defaultValue>
    <label>Tier Evaluation Date</label>
    <type>Date</type>
</CustomField>