ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tier__c/fields/Tier_Label__c.field-meta.xml
<CustomField>
    <fullName>Tier_Label__c</fullName>
    <label>Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>